fix: color opacity slider not visible

--- a/inc/customizer/custom-controls/settings-group/settings-group.css
+++ b/inc/customizer/custom-controls/settings-group/settings-group.css
@@ -74,6 +74,10 @@
     padding: 20px 5px 20px;
 }
 
+.ast-group-tabs .ui-widget-content.iris-slider-offset-alpha {
+    overflow: inherit;
+}
+
 .ast-fields-wrap{
     overflow: hidden;
     padding: 10px;
